force-app/main/default/objects/numm__Import_CFONB__c/numm__Import_CFONB__c.object-meta.xml
<CustomObject>
    <label>Import CFONB</label>
    <nameField>
        <displayFormat>CFONB-{YY}-{MM}-{DD}-{00}</displayFormat>
        <label>Import CFONB</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imports CFONB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>