force-app/main/default/objects/numm__Import_CFONB__c/fields/numm__Date_heure_import__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_heure_import__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date/heure de l&#39;import</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>