force-app/main/default/objects/numm__Import_CFONB__c/fields/numm__Email_expediteur__c.field-meta.xml
<CustomField>
    <fullName>numm__Email_expediteur__c</fullName>
    <label>E-mail expéditeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>