force-app/main/default/objects/numm__Import_CFONB__c/fields/numm__filename__c.field-meta.xml
<CustomField>
    <fullName>numm__filename__c</fullName>
    <label>filename</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>