force-app/main/default/objects/numm__Import_CFONB__c/fields/numm__Message__c.field-meta.xml
<CustomField>
    <fullName>numm__Message__c</fullName>
    <description>Message de succès ou d&#39;erreur après traitement.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>