force-app/main/default/objects/numm__Import_CFONB__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <formula>IF(
  TEXT(numm__Statut_liste__c) = &#39;En cours&#39;,
  IMAGE(&#39;/img/msg_icons/info16.png&#39;, &#39;Erreur&#39;),
  IF(
    numm__TECH_Erreur__c,
    IMAGE(&#39;/img/msg_icons/error16.png&#39;, &#39;Erreur&#39;),
    IMAGE(&#39;/img/msg_icons/confirm16.png&#39;, &#39;Succès&#39;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>