force-app/main/default/objects/numm__Import_CFONB__c/fields/numm__Statut_liste__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut_liste__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
                <default>true</default>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Succès</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>