force-app/main/default/objects/numm__Import_CFONB__c/fields/numm__TECH_Erreur__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Erreur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_Erreur</label>
    <type>Checkbox</type>
</CustomField>