force-app/main/default/objects/numm__Import_CFONB__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__Date_heure_import__c</columns>
    <columns>numm__Email_expediteur__c</columns>
    <columns>numm__Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>